_setup/k8s/microservice/ingress/customerservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customerservice-ingress
  namespace: microservice
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/customer/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customerservice
                port:
                  number: 8081
