_setup/k8s/microservice/ingress/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: microservice
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/web/$1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /web/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp
                port:
                  number: 80
